fix: update Node to 20.19 for Angular CLI 21

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'   # 👈 ESTA ES LA CLAVE
+          node-version: 20.19   # 👈 VERSIÓN CORRECTA
           cache: 'npm'
 
       - name: Install dependencies
