--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,20 +14,20 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.19   # 👈 VERSIÓN CORRECTA
+          node-version: 20.19
           cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build Angular app
-        run: npm run build -- --output-path=dist --base-href="/icc-ppw-u1-03Componentes-Estilos/"
+        run: npm run build -- --base-href="/icc-ppw-u1-03Componentes-Estilos/"
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./dist/03-ui-componentes-estilos/browser   # 👈 RUTA CORRECTA
