--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,12 @@ name: Deploy Angular app to GitHub Pages
 on:
   push:
     branches:
-      - master
+      - main
+      
   workflow_dispatch:
+permissions:
+  contents: write
+ 
 
 jobs:
   build-and-deploy:
