fix: enable permissions for GitHub Actions deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,10 @@ on:
   push:
     branches:
       - main
-      
   workflow_dispatch:
+
 permissions:
   contents: write
- 
 
 jobs:
   build-and-deploy:
@@ -18,10 +17,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.19
+          node-version: '20.19'
           cache: 'npm'
 
       - name: Install dependencies
@@ -34,4 +33,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/03-ui-componentes-estilos/browser   # 👈 RUTA CORRECTA
+          publish_dir: ./dist/03-ui-componentes-estilos/browser
